tests/NormalTests/paczka1/fuzzy1/32097668.err
Error in line 2: QPIlH A843 25,64
Error in line 20: BNy2Q7nGW A843 14,9
Error in line 24: BNy2Q7nGW SJ40 4,9
Error in line 28: AVtH S340 82,5
Error in line 27: UJ9w6XkeExM A843 32,3
